# Socialhub-CLI

./: .dockerignore  .env.docker  .env.docker.example  .env.local.example  .gitignore  CLAUDE.md  CODEX.md  Dockerfile  Heartbeat.md  Jenkinsfile  Memory.md  README.md  account-profile.html  admin-portal.html  app.js  consulting_demo_report.md  demo_business_report.md  developer-portal.html  developer.html  docker-compose.test.yml  docker-compose.yml  docs-center.html  index.html  installed.html  login.html  logout.html  pyproject.toml  register.html  render.yaml  run_claude_mcp.py  skill.html  styles.css  user.html
alembic_mcp/: alembic.ini  env.py
cli/: config.py  main.py  network.py  snowflake_sync.py
design/: RESTRUCTURE-PLAN.md  analyst-cli-plan.md  architecture.md  database-schema-guide.md  naming-conventions.md  overview.md  remote-mcp-service-migration.md  skills-store-engineering-guidelines.md  storefront-user-cases.md
docker/: emarsys-sync.Dockerfile  init-db.sql  mcp-server.Dockerfile  skills-store.Dockerfile  test-runner.Dockerfile
docs/: AI-Frontier-CIO-Technical-Report-en.md  AI-Frontier-CIO-Technical-Report.md  Architecture-Reference-en.md  Architecture-Reference.md  CMO-AI-Frontier-Playbook-en.md  CMO-AI-Frontier-Playbook.md  DESIGN.md  Data-Analyst-Handbook-en.md  Data-Analyst-Handbook.md  PRD-Skills-Store.md  README.md  SECURITY-GUIDE-DEVELOPERS.md  SECURITY-GUIDE-USERS.md  SKILLS-DEVELOPMENT-PLAN.md  TASKS-SKILLS-STORE.md  admin-login.html  admin.html  app.js  developer-login.html  developer.html  index.html  integration-test-plan.md  login.html  skill.html  skills-store-design.md  skills-store-implementation-plan.md  skills-store-render-deploy.md  skills-technical-spec.md  styles.css  test-cases-mcp-http.md  user.html  why-cli.html  安装指南.md
emarsys_sync/: __main__.py  bq_reader.py  datanow_writer.py  dts_writer.py  runner.py  scheduler.py  summary.py  tenant_syncer.py  view_manager.py
frontend/: index.html  package-lock.json  vite.config.js
mcp_server/: __init__.py  __main__.py  auth.py  db.py  models.py  (+3 more)
skills-store/: .env.example  ANALYST-CLI-REQUIREMENTS.md  ANALYST-USER-GUIDE.md  CLI-REQUIREMENTS.md  README.md  TECHNICAL-DESIGN.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start.ps1  start.sh
skills-store/alembic/: env.py
skills-store/alembic/versions/: 0001_initial_schema.py  0002_skill_detail_content.py  0003_developer_saved_skills.py  0004_users_and_user_skills.py
skills-store/backend/: seed.py
skills-store/backend/app/: __init__.py  config.py  database.py  main.py
skills-store/backend/app/auth/: dependencies.py  jwt.py
skills-store/backend/app/models/: __init__.py  developer.py  enums.py  skill.py  skill_certification.py  skill_review.py  skill_version.py  user.py  user_skill.py
skills-store/backend/app/routers/: admin.py  auth.py  developer.py  public.py  user_skills.py  users.py
skills-store/backend/app/schemas/: admin.py  auth.py  skill.py  user.py
skills-store/backend/app/services/: auth.py  certificates.py  scan.py  skills.py
skills-store/backend/app/utils/: __init__.py  packages.py
skills-store/frontend/: package.json
skills-store/frontend/src/: App.jsx  main.jsx
skills-store/frontend/src/components/: Layout.jsx
skills-store/frontend/src/pages/: LoginPage.jsx  SkillDetailPage.jsx  UserLoginPage.jsx  UserPage.jsx
(+333 files in other folders)
