[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialhub-cli"
version = "0.1.0"
description = "SocialHub.AI CLI - Customer Engagement Platform command line tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SocialHub.AI Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "cryptography>=41.0.0",
    "mcp>=1.8.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]
snowflake = [
    "pandas>=2.0.0",
    "snowflake-connector-python[pandas]>=4.4.0",
    "openpyxl>=3.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
socialhub = "cli.main:cli"
socialhub-mcp = "mcp_server.__main__:main"
socialhub-sync-snowflake = "cli.snowflake_sync:main"

[project.urls]
Homepage = "https://github.com/socialhub-ai/cli"
Documentation = "https://docs.socialhub.ai/cli"
Repository = "https://github.com/socialhub-ai/cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "mcp_server*"]

[tool.setuptools.package-data]
"cli" = ["defaults.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cli --cov-report=term-missing"
